# garmin-data

./: .envrc.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/garmin_data/: auth.py  cli.py  database.py  sync.py
tests/: test_auth.py  test_cli.py  test_database.py  test_sync.py
